# AlphaPulse-OKX

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: alerts.rs  auto_strategy.rs  config.rs  domain.rs  lib.rs  macro_cycle.rs  main.rs  market_context.rs  paper.rs  persistence.rs  quality.rs  risk_safety.rs  runtime.rs  scoring.rs  server.rs  state.rs  strategy.rs  strategy_identity.rs  time_regime.rs  universe.rs  valuation.rs
backend/src/indicators/: fvg.rs  levels.rs  mod.rs  patterns.rs  scalping.rs
backend/src/okx/: rest.rs  ws.rs
backend/tests/: alerts.rs  auto_strategy.rs  domain_config.rs  fvg.rs  levels.rs  okx_parsing.rs  okx_rest.rs  persistence.rs  persistence_integration.rs  quality.rs  risk_safety.rs  scoring.rs  server.rs  state_prices.rs  strategy_admin.rs  strategy_versions.rs  universe.rs  valuation.rs
deploy/: README.md  alphapulse-okx.service  install.sh  nginx.alphapulse-okx.conf
docs/recovery/: legacy-v3-evidence.json
docs/superpowers/plans/: 2026-06-25-okx-perp-trading-radar.md  2026-07-01-frontend-console-redesign.md  2026-07-01-radar-pattern-signals.md  2026-07-03-frontend-four-page-console.md  2026-07-10-frontend-mobile-adaptation.md  (+3 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  ChartPanel.tsx  ConsoleShell.tsx  MacroPanel.tsx  MacroSummaryStrip.tsx  MonitorPage.tsx  PaginationControls.tsx  RadarTable.tsx  RadarWorkspace.tsx  ReviewPage.tsx  StrategyPage.tsx  SymbolDetailPanel.tsx  TradePage.tsx  TradingViewModal.tsx  api.test.ts  api.ts  figmaTerminal.test.ts  figmaTerminal.ts  i18n.ts  notifications.test.ts  notifications.ts  realtime.test.ts  realtime.ts  styles.css  styles.test.ts  types.ts  uiFormat.test.ts  uiFormat.ts
scripts/: recovery_manifest.py
scripts/tests/: test_deploy_contract.py  test_recovery_manifest.py
(+14 files in other folders)
